css/style.css
/* ... */
  @media (max-width: 991.98px) {
    .ftco-navbar-light {
      background: #000000 !important;
      position: relative;
      top: 0;
      padding-top: 0;
      padding-bottom: 0;
      padding-left: 15px;
      padding-right: 15px; } }
  .ftco-navbar-light .container {
    width: 1110px;
    margin: 0 auto;
    padding: 0; }
  .ftco-navbar-light .navbar-brand {
    color: #000000;
    padding-top: .7rem;
    padding-bottom: .7rem; }
    .ftco-navbar-light .navbar-brand:hover, .ftco-navbar-light .navbar-brand:focus {
      color: #000000 !important; }
    @media (max-width: 991.98px) {
      .ftco-navbar-light .navbar-brand {
        color: #fff; } }
  @media (max-width: 991.98px) {
    .ftco-navbar-light .navbar-nav {
      padding-bottom: 20px;
      margin-right: 0; } }
  .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
    font-size: 16px;
    padding-top: .7rem;
    padding-bottom: .7rem;
    padding-left: 20px;
    padding-right: 20px;
    color: #051441;
    font-weight: 600;
    opacity: 1 !important; }
    .ftco-navbar-light .navbar-nav > .nav-item > .nav-link span {
      position: relative;
      display: block;
      padding-bottom: 2px; }
      @media (max-width: 1199.98px) {
        .ftco-navbar-light .navbar-nav > .nav-item > .nav-link span {
          display: inline-block; } }
      .ftco-navbar-light .navbar-nav > .nav-item > .nav-link span:before {
        content: "";
        position: absolute;
        width: 100%;
        height: 2px;
        bottom: 0;
        left: 0;
        background: #ff0202;
        visibility: visible;
        -webkit-transform: scaleX(0);
        -moz-transform: scaleX(0);
        -ms-transform: scaleX(0);
        -o-transform: scaleX(0);
        transform: scaleX(0);
        -webkit-transition: all 0.3s ease-in-out 0s;
        -moz-transition: all 0.3s ease-in-out 0s;
        -ms-transition: all 0.3s ease-in-out 0s;
        -o-transition: all 0.3s ease-in-out 0s;
        transition: all 0.3s ease-in-out 0s; }
    .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover span:before {
      visibility: visible;
      -webkit-transform: scaleX(1);
      -moz-transform: scaleX(1);
      -ms-transform: scaleX(1);
      -o-transform: scaleX(1);
      transform: scaleX(1); }
    @media (max-width: 991.98px) {
      .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
        padding-left: 0;
        padding-right: 0;
        padding-bottom: 1rem;
        padding-top: 0;
        color: #fff; } }
  .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
    color: #fff;
    border: 1px solid #17b978;
    padding-top: .7rem;
    padding-bottom: .7rem;
    padding-left: 18px;
    padding-right: 18px;
    background: #17b978;
    margin-top: 0;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    border-radius: 5px; }
    .ftco-navbar-light .navbar-nav > .nav-item.cta > a span {
      display: inline-block;
      color: #fff; }
    .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
      background: #17b978;
      border: 1px solid #17b978; }
  .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored a {
    border: 1px solid #a0f669;
    background: #a0f669 !important; }
  .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active {
    background: transparent;
    background: none;
    color: #17b978; }
    .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active span:before {
      visibility: visible;
      -webkit-transform: scaleX(1);
      -ms-transform: scaleX(1);
      transform: scaleX(1); }
  @media (max-width: 991.98px) {
    .ftco-navbar-light .navbar-nav > .nav-item.active > a {
      color: #17b978; } }
  .ftco-navbar-light .navbar-toggler {
    border: none;
    color: rgba(255, 255, 255, 0.5) !important;
    cursor: pointer;
    padding-right: 0;
    text-transform: uppercase;
    font-size: 16px;
    letter-spacing: .1em; }
    .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
      text-decoration: none;
      color: #17b978;
      outline: none !important; }
  .ftco-navbar-light.scrolled {
    position: fixed;
    right: 0;
    left: 0;
    top: 0;
    margin-top: -130px;
    background: #fff !important;
    -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
    padding: 0 15px; }
    .ftco-navbar-light.scrolled .nav-item > .nav-link {
      color: #000000 !important; }
      @media (max-width: 991.98px) {
        .ftco-navbar-light.scrolled .nav-item > .nav-link {
          padding-left: 0 !important;
          padding-right: 0 !important;
          padding-bottom: 20px !important; } }
    .ftco-navbar-light.scrolled .nav-item.active > a {
      color: #17b978 !important; }
    .ftco-navbar-light.scrolled .nav-item.cta > a {
      color: #fff !important;
      background: #17b978;
      border: none !important;
      padding-top: 0.5rem !important;
      padding-bottom: .5rem !important;
      padding-left: 20px !important;
      padding-right: 20px !important;
      margin-top: 5px !important;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      -ms-border-radius: 5px;
      border-radius: 5px; }
      .ftco-navbar-light.scrolled .nav-item.cta > a span {
        display: inline-block;
        color: #fff !important; }
    .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
      border-color: #17b978; }
    @media (max-width: 991.98px) {
      .ftco-navbar-light.scrolled .navbar-nav {
        background: none;
        border-radius: 0px;
        padding-left: 0 !important;
        padding-right: 0 !important;
        margin-left: 0 !important; } }
    .ftco-navbar-light.scrolled .navbar-toggler {
      border: none;
      color: rgba(0, 0, 0, 0.5) !important;
      border-color: rgba(0, 0, 0, 0.5) !important;
      cursor: pointer;
      text-transform: uppercase;
      font-size: 16px;
      letter-spacing: .1em; }
/* ... */

